k8up/ingress-k8up.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-k8up
  namespace: k8up
spec:
  selector: app.kubernetes.io/instance == 'k8up'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'monitoring'
        selector: app == 'prometheus'
      destination:
        ports:
          - 8080
